--- a/sass/layouts/_clients.scss
+++ b/sass/layouts/_clients.scss
@@ -4,7 +4,7 @@
   @include desktop {
     padding-top: 94px;
   }
-  
+
   background-color: var(--main-background-color);
 
   &-title {
@@ -33,9 +33,25 @@
   }
 }
 
+.clients-item {
+  display: flex;
+  flex-basis: calc((100% - 30px) / 2);
+  @include mobile {
+    flex-basis: calc((100% - 30px) / 2);
+  }
+  @include tablet {
+    flex-basis: calc((100% - 60px) / 3);
+  }
+  @include desktop {
+    flex-basis: calc((100% - 150px) / 6);
+  }
+}
+
 .clients-item-link {
   display: flex;
-  width: 170px;
+  flex-wrap: wrap;
+
+  width: 100%;
   height: 92px;
   justify-content: center;
   align-items: center;
