--- a/sass/layouts/_hero.scss
+++ b/sass/layouts/_hero.scss
@@ -16,6 +16,9 @@
 
   background-repeat: no-repeat;
   background-position: center;
+  @media screen and (min-width: 940px) and (max-width: 1199px) {
+    background-position: top;
+  }
   background-size: cover;
   margin-left: auto;
   margin-right: auto;
@@ -28,23 +31,29 @@
   }
   @include tablet {
     background-image: linear-gradient(var(--hero-overlay), var(--hero-overlay)),
-    url(../images/hero-tab.jpg);
-     @media (min-device-pixel-ratio: 2),
-    (min-resolution: 192dpi),
-    (min-resolution: 2dppx) {
-    background-image: linear-gradient(var(--hero-overlay), var(--hero-overlay)),
-      url(../images/hero-tab-2x.jpg);
+      url(../images/hero-tab.jpg);
+    @media (min-device-pixel-ratio: 2),
+      (min-resolution: 192dpi),
+      (min-resolution: 2dppx) {
+      background-image: linear-gradient(
+          var(--hero-overlay),
+          var(--hero-overlay)
+        ),
+        url(../images/hero-tab-2x.jpg);
+    }
   }
-  }
-    @include desktop {
+  @include desktop {
     background-image: linear-gradient(var(--hero-overlay), var(--hero-overlay)),
-    url(../images/hero.jpg);
-     @media (min-device-pixel-ratio: 2),
-    (min-resolution: 192dpi),
-    (min-resolution: 2dppx) {
-    background-image: linear-gradient(var(--hero-overlay), var(--hero-overlay)),
-      url(../images/hero-2x.jpg);
-  }
+      url(../images/hero.jpg);
+    @media (min-device-pixel-ratio: 2),
+      (min-resolution: 192dpi),
+      (min-resolution: 2dppx) {
+      background-image: linear-gradient(
+          var(--hero-overlay),
+          var(--hero-overlay)
+        ),
+        url(../images/hero-2x.jpg);
+    }
   }
 
   &__title {
@@ -54,7 +63,7 @@
     margin-right: auto;
 
     font-weight: 900;
-    font-size: 24px;
+    font-size: 20px;
 
     line-height: 1.62;
 
