--- a/sass/layouts/_menu.scss
+++ b/sass/layouts/_menu.scss
@@ -122,29 +122,24 @@
 .menu__link--soc {
   position: relative;
   font-weight: 500;
-  font-size: 14px;
-  @include mobile {
-    font-size: 18px;
-  }
+  font-size: 18px;
   line-height: 1.22;
   letter-spacing: 0.02em;
   text-decoration: none;
   color: var(--accent-text-color);
 }
 
-@include mobile {
-  .menu__item--soc {
-    position: relative;
-    &:not(:last-child)::after {
-      content: "";
-      position: absolute;
-      display: inline-block;
-      top: 0;
-      right: -10px;
-      height: 100%;
-      width: 1px;
-      background-color: rgba(33, 33, 33, 0.2);
-    }
+.menu__item--soc {
+  position: relative;
+  &:not(:last-child)::after {
+    content: "";
+    position: absolute;
+    display: inline-block;
+    top: 0;
+    right: -10px;
+    height: 100%;
+    width: 1px;
+    background-color: rgba(33, 33, 33, 0.2);
   }
 }
 
@@ -152,9 +147,14 @@
   display: flex;
   flex-wrap: wrap;
   gap: 20px;
-  justify-content: space-between;
   @include mobile {
     justify-content: start;
     flex-wrap: nowrap;
+  }
+}
+
+@include tablet {
+  .menu {
+    display: none;
   }
 }
