--- a/sass/layouts/_portfolio.scss
+++ b/sass/layouts/_portfolio.scss
@@ -110,6 +110,7 @@
   align-items: center;
   padding-left: 24px;
   padding-right: 24px;
+  overflow-y: scroll;
 
   position: absolute;
   height: 100%;
